feat: atualiza o nome das colunas no modelo de transação
