# app/models/transaction/deposit/step/persist.rb
@@ -2,11 +2,11 @@ module Transaction
   module Deposit
     module Step
       class Persist < Micro::Case::Strict
-        attributes :origin_id, :value
+        attributes :account_origin_id, :value
 
         def call! # rubocop:disable Metrics/MethodLength
           transaction = Transaction::Record.new(
-            origin_id:,
+            account_origin_id:,
             transaction_type: :deposito,
             value:,
             hour: Time.zone.now.to_datetime
