# app/models/transaction/record.rb
@@ -4,8 +4,8 @@ module Transaction
 
     self.table_name = 'transactions'
 
-    belongs_to :origin, class_name: 'Account::Record', optional: false
-    belongs_to :destiny, class_name: 'Account::Record', optional: true
+    belongs_to :account_origin, class_name: 'Account::Record', optional: false
+    belongs_to :account_destiny, class_name: 'Account::Record', optional: true
 
     enum transaction_type: {
       deposito: 0,
@@ -13,7 +13,7 @@ module Transaction
       transferencia: 2
     }
 
-    scope :filter_by_origin_id, ->(value) { where(origin_id: value) }
+    scope :filter_by_account_origin_id, ->(value) { where(account_origin_id: value) }
     scope :filter_by_transaction_type, ->(value) { where(transaction_type: value) }
   end
 end
